added filtering options

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <label hidden>Country <select id='countries'>
             <option value="">Any</option>
         </select></label>
+        <label hidden>Top rated<input id="top-rated" value="" type="checkbox"></label>
         <div id="films"></div>
         
     </header>
