added about page

--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800;900&display=swap"
         rel="stylesheet">
     <!--Javascript files-->
-    <script defer src="script.js"></script>
+    
 </head>
 
 <body>
@@ -43,41 +43,9 @@
                 </ul>
             </nav>
         </div>
-        <div class="headline">
-            <h1>Find a film to watch tonight</h1>
+        <div class="about">
+            <p>MovieFind helps you find a film to watch by suggesting three random films from the TMDB database based on your chosen criteria.</p>
+
         </div>
-    </header>
-    <main>
-        <div class="selection-bar">
-            <select id="genres">
-                <option value="" hidden>Choose genre</option>
-                <option value="">Any</option>
-            </select>
-            <button id="find">Let's go</button>
-            <p id="filters">Add filters</p>
-            <p id="hide-filters" style="display:none">Hide filters</p>
-        </div>
-        <div id="filter-options" style="display: none">
-            <select id="languages">
-                <option value="" hidden>Language</option>
-                <option value="">Any</option>
-            </select> </label>
-            <select id='countries'>
-                <option value="" hidden>Country</option>
-                <option value="">Any</option>
-            </select>
-            <label>Year <input id='year' value="" type='number'></label>
-            <label>Top rated<input id="top-rated" value="" type="checkbox"></label>
-        </div>
-        <div id="films"></div>
-
-    </main>
-    <footer>
-
-    </footer>
-
-
-
+        </header>
 </body>
-
-</html>
