--- a/About.html
+++ b/About.html
@@ -44,7 +44,8 @@
             </nav>
         </div>
         <div class="about">
-            <p>MovieFind helps you find a film to watch by suggesting three random films from the TMDB database based on your chosen criteria.</p>
+            <p>MovieFind helps you find a film to watch by suggesting three random films based on your criteria.</p>
+            <p>This website uses the TMDb API but is not endorsed or certified by <a href="https://www.themoviedb.org/">TMDb</a>.</p>
 
         </div>
         </header>
